--- a/theme.css
+++ b/theme.css
@@ -1,4 +1,4 @@
-@\import "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700";
+@\import url('https://rsms.me/inter/inter.css');
 
 html {
   font-size: 62.5%;
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Inter', sans-serif;
   font-size: 14px;
   background: #efefef none no-repeat center / cover fixed;
 }
