--- a/theme.css
+++ b/theme.css
@@ -2031,6 +2031,10 @@ div#fancybox-wrap {
   content: "Eu coleciono o mangá e ele foi lançado aqui pela Todavia."; 
 }
 
+.list-table .list-table-data .data.tags span a[href*="\=Conrad"]::after {
+  content: "Eu coleciono o mangá e ele foi lançado aqui pela Conrad."; 
+}
+
 .list-table .list-table-data .data.tags span a[href*="\=Desprez%C3%ADvel"]::after {
   content: "A obra possui um conteúdo repugnante e desprezível.\a\a Exemplos: Estupros, Incestos etc.";
 }
