--- a/scss/utilities/initial-variables.scss
+++ b/scss/utilities/initial-variables.scss
@@ -237,7 +237,8 @@ $genres: (
     description: 'Quando a obra possui muito enfoque em mostrar sem necessidade, apenas por fanservice, peitos ou bundas.',
     image:'https://i.giphy.com/media/3jbdh4RO1PHIfHHQqG/giphy.gif',
     padding-top: 185px
-  )
+  ),
+  'cyberpunk': (url: '\=Cyberpunk')
 );
 
 $custom-1: (
