--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,5 @@
 #footer-block {
-  background: $footer-background;
+  background: $footer-background-color;
   font-family: $font-family;
   padding: 3rem 1.5rem 6rem;
 
