--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url("https://rsms.me/inter/inter.css");
-.list-unit .list-status-title .stats a {
+#gdpr-modal-bottom .modal-container .button-wrapper button, #gdpr-modal-bottom .modal-container .button-wrapper a, .header .header-menu.other .header-info a, .list-unit .list-status-title .stats a {
   background-color: #fff;
   border: 1px #dbdbdb solid;
   color: #363636;
@@ -11,25 +11,27 @@
   font-size: 1rem;
   height: 2.5em;
   transition: none;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
 }
 
-.list-unit .list-status-title .stats a i.fa {
+#gdpr-modal-bottom .modal-container .button-wrapper button i.fa, #gdpr-modal-bottom .modal-container .button-wrapper a i.fa, .header .header-menu.other .header-info a i.fa, .list-unit .list-status-title .stats a i.fa {
   margin-left: calc(-0.5em - 1px);
   margin-right: 0.25em;
   width: 1.5em;
   height: 1.5em;
 }
 
-.list-unit .list-status-title .stats a:hover {
+#gdpr-modal-bottom .modal-container .button-wrapper button:hover, #gdpr-modal-bottom .modal-container .button-wrapper a:hover, .header .header-menu.other .header-info a:hover, .list-unit .list-status-title .stats a:hover {
   border-color: #b5b5b5;
   color: #363636;
 }
 
-.list-unit .list-status-title .stats a:focus {
+#gdpr-modal-bottom .modal-container .button-wrapper button:focus, #gdpr-modal-bottom .modal-container .button-wrapper a:focus, .header .header-menu.other .header-info a:focus, .list-unit .list-status-title .stats a:focus {
   box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
 }
 
-.list-unit .list-status-title .stats a:last-of-type {
+#gdpr-modal-bottom .modal-container .button-wrapper button:last-of-type, #gdpr-modal-bottom .modal-container .button-wrapper a:last-of-type, .header .header-menu.other .header-info a:last-of-type, .list-unit .list-status-title .stats a:last-of-type {
   margin-right: 0;
 }
 
@@ -102,27 +104,186 @@ a:hover {
   color: #4065BA;
 }
 
-.header {
+#gdpr-modal-bottom {
+  background: transparent;
+}
+
+#gdpr-modal-bottom .modal-container {
+  font-family: "Inter", sans-serif;
+}
+
+#gdpr-modal-bottom .modal-container .button-wrapper button {
   background-color: #4065BA;
+  color: #fff;
+  border-color: transparent;
+}
+
+#gdpr-modal-bottom .modal-container .button-wrapper button:last-of-type {
+  margin: 0 auto 12px;
+}
+
+#gdpr-modal-bottom .modal-container .button-wrapper button:hover {
+  background-color: #3d60b1;
+  color: #fff;
+  border-color: transparent;
+}
+
+#gdpr-modal-bottom .modal-container .button-wrapper button:focus {
+  color: #fff;
+  border-color: transparent;
+}
+
+#gdpr-modal-bottom .modal-container .button-wrapper a {
+  border-color: transparent;
+}
+
+#gdpr-modal-bottom .modal-container .button-wrapper a:hover {
+  background-color: #f9f9f9;
+  border-color: transparent;
+}
+
+#gdpr-modal-bottom .modal-container .button-wrapper a:focus {
+  border-color: transparent;
+}
+
+.header {
+  background-color: transparent;
   width: 100%;
+  height: 70px;
   padding-left: calc(50% - 512px);
   padding-right: calc(50% - 512px);
   display: flex;
+  justify-content: center;
+  z-index: 5;
   box-sizing: border-box;
 }
 
 .header .header-title {
   position: inherit;
-  width: 196px;
+  width: 154px;
+  height: 26px;
   background-size: 154px 26px;
+  margin-top: 5px;
   order: 1;
 }
 
 .header .header-menu {
-  position: inherit;
+  position: initial;
   order: 2;
   flex-grow: 1;
   color: rgba(255, 255, 255, 0.7);
+  display: inline-flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.header .header-menu.other .btn-menu {
+  font-size: 0;
+  height: 100%;
+}
+
+.header .header-menu.other .btn-menu a {
+  height: 100%;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  padding: 0.5rem 0.75rem;
+  box-sizing: border-box;
+  color: rgba(255, 255, 255, 0.7);
+  display: inline-flex;
+  align-items: center;
+}
+
+.header .header-menu.other .btn-menu a:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: #fff;
+}
+
+.header .header-menu.other .btn-menu a.username::before {
+  content: '@';
+}
+
+.header .header-menu.other .btn-menu i.fa {
+  margin-left: 0.5rem;
+}
+
+.header .header-menu.other .list-menu {
+  border-radius: 6px;
+  border: none;
+  box-shadow: 0 8px 8px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+  font-size: 0.875rem;
+  padding: 0.5rem 0;
+  top: 56px;
+  right: calc(50vw - 512px + 308px);
+}
+
+.header .header-menu.other .list-menu .icon-menu {
+  padding: 0.375rem 1rem;
+  white-space: nowrap;
+  display: flex;
+  align-items: center;
+  color: #4a4a4a;
+  line-height: 1.5;
+  font-weight: 400;
+  box-sizing: border-box;
+}
+
+.header .header-menu.other .list-menu .icon-menu:hover {
+  background-color: #f5f5f5;
+  color: #0a0a0a;
+}
+
+.header .header-menu.other .list-menu .icon-menu:hover svg.icon {
+  fill: #4a4a4a;
+}
+
+.header .header-menu.other .list-menu .icon-menu svg.icon,
+.header .header-menu.other .list-menu .icon-menu span.text {
+  position: initial;
+}
+
+.header .header-menu.other .list-menu .icon-menu svg.icon {
+  fill: #4a4a4a;
+  width: 1rem;
+  height: 1rem;
+  margin-right: 0.5rem;
+}
+
+.header .header-menu.other .header-info {
+  font-size: 0;
+  margin-top: 0;
+  margin-right: 0;
+}
+
+.header .header-menu.other .header-info a {
+  border-color: transparent;
+  margin: 0.5rem 0.75rem;
+}
+
+.header .header-menu.other .header-info a:hover {
+  background-color: #f2f2f2;
+  border-color: transparent;
+}
+
+.header .header-menu.other .header-info a:focus {
+  border-color: transparent;
+}
+
+.header .header-menu.other .header-info a:last-of-type {
+  background-color: #4065BA;
+  border-color: transparent;
+  color: #fff;
+}
+
+.header .header-menu.other .header-info a:last-of-type:hover {
+  background-color: #3d60b1;
+  color: #fff;
+  border-color: transparent;
+}
+
+.header .header-menu.other .header-info a:last-of-type:focus {
+  color: #fff;
+  border-color: transparent;
 }
 
 .list-container {
@@ -132,9 +293,14 @@ a:hover {
 }
 
 .cover-block {
-  background-color: #4065BA;
+  background-image: url("https://i.imgur.com/einmpQQ.gif");
+  background-color: transparent;
+  background-repeat: repeat-x;
+  background-position-x: 0;
+  background-position-y: 0;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
   width: 100%;
+  padding-top: 70px;
 }
 
 .cover-block .image-container {
@@ -149,7 +315,7 @@ a:hover {
   color: #4065BA;
   font-family: "Inter", sans-serif;
   font-size: 0.875rem;
-  top: 1.5em !important;
+  top: calc(1.5em + 70px) !important;
   right: calc(50% - 512px) !important;
   padding: calc(.5em - 1px) calc(1em + .25em) !important;
   font-family: "Inter", sans-serif !important;
@@ -245,6 +411,10 @@ a:hover {
   margin-top: 16px;
 }
 
+.list-container {
+  margin-top: -70px;
+}
+
 .list-unit .list-status-title {
   background-color: transparent;
   width: 100%;
@@ -270,12 +440,12 @@ a:hover {
 }
 
 body.manga .list-unit.all_anime .text::after {
-  content: 'All manga';
+  content: 'All Manga';
   font-size: 2rem;
 }
 
 body.anime .list-unit.all_anime .text::after {
-  content: 'All anime';
+  content: 'All Anime';
   font-size: 2rem;
 }
 
@@ -285,17 +455,17 @@ body.anime .list-unit.all_anime .text::after {
 }
 
 .list-unit.reading .list-status-title .text::after {
-  content: 'Currently reading';
+  content: 'Currently Reading';
   font-size: 2rem;
 }
 
 .list-unit.watching .list-status-title .text::after {
-  content: 'Currently watching';
+  content: 'Currently Watching';
   font-size: 2rem;
 }
 
 .list-unit.onhold .list-status-title .text::after {
-  content: 'On hold';
+  content: 'On Hold';
   font-size: 2rem;
 }
 
@@ -305,12 +475,12 @@ body.anime .list-unit.all_anime .text::after {
 }
 
 .list-unit.plantoread .list-status-title .text::after {
-  content: 'Plan to read';
+  content: 'Plan to Read';
   font-size: 2rem;
 }
 
 .list-unit.plantowatch .list-status-title .text::after {
-  content: 'Plan to watch';
+  content: 'Plan to Watch';
   font-size: 2rem;
 }
 
@@ -364,7 +534,7 @@ body.anime .list-unit.all_anime .text::after {
   position: relative;
   display: block;
   width: 100%;
-  min-height: 4rem;
+  min-height: 4.5rem;
   border: none;
   margin-bottom: 1em;
   background: #fff;
@@ -377,7 +547,7 @@ body.anime .list-unit.all_anime .text::after {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 4rem;
+  min-height: 4.5rem;
   font-size: 0;
 }
 
@@ -674,19 +844,24 @@ body.anime .list-unit.all_anime .text::after {
 }
 
 .list-table .list-table-data .data.tags span a:not(.edit), .list-table .list-table-data .data.studio span a:not(.edit), .list-table .list-table-data .data.licensor span a:not(.edit) {
-  display: block;
-  padding: 2px;
-  background: #ebebeb;
-  border-radius: 0.5rem;
-  color: #363636;
+  align-items: center;
+  background-color: #f5f5f5;
+  color: #4a4a4a;
+  display: inline-flex;
   font-size: 0.75rem;
-  line-height: 1.2;
-  z-index: 10;
+  width: 100%;
+  height: 2em;
+  justify-content: center;
+  line-height: 1.5;
+  padding-left: 0.75em;
+  padding-right: 0.75em;
+  white-space: nowrap;
+  box-sizing: border-box;
+  border-radius: 1em;
 }
 
 .list-table .list-table-data .data.tags span a:hover, .list-table .list-table-data .data.studio span a:hover, .list-table .list-table-data .data.licensor span a:hover {
-  background: #363636;
-  color: #fff;
+  background-color: #e8e8e8;
   text-decoration: none;
 }
 
@@ -704,7 +879,7 @@ body.anime .list-unit.all_anime .text::after {
 }
 
 .list-table .list-table-data .data.tags a.edit::after, .list-table .list-table-data .data.studio a.edit::after, .list-table .list-table-data .data.licensor a.edit::after {
-  content: '\f040';
+  content: '\f02c';
   position: absolute;
   top: 50%;
   right: 0;
@@ -737,30 +912,36 @@ body.anime .list-unit.all_anime .text::after {
   order: 25;
   position: relative;
   width: 8rem;
+  min-height: 1.3rem;
   height: 1.3rem;
   overflow: hidden;
   color: #363636;
   font-size: 0.875rem;
-  line-height: 1rem;
+  line-height: 1.5;
   text-align: left;
   text-overflow: ellipsis;
   font-feature-settings: 'tnum' 1;
+  display: inline-flex;
+  align-items: center;
 }
 
 .list-table .list-table-data .data.started::before, .list-table .list-table-data .data.finished::before, .list-table .list-table-data .data.days::before, .list-table .list-table-data .data.airing-started::before, .list-table .list-table-data .data.airing-finished::before {
-  display: inline-block;
+  display: inline-flex;
   width: 2rem;
-  height: 1.1rem;
+  height: 100%;
   padding-right: 0.25rem;
+  margin-right: 0.25rem;
   border-right: 1px solid #9a9a9a;
   text-align: right;
   color: #bababa;
   font-size: 0.75em;
   font-feature-settings: 'tnum' 0;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .list-table .list-table-data .data.started {
-  top: -1rem;
+  top: -1.3rem;
 }
 
 .list-table .list-table-data .data.started::before {
@@ -777,7 +958,7 @@ body.anime .list-unit.all_anime .text::after {
 }
 
 .list-table .list-table-data .data.days {
-  top: 1rem;
+  top: 1.3rem;
   margin-left: -8rem;
 }
 
@@ -786,11 +967,11 @@ body.anime .list-unit.all_anime .text::after {
 }
 
 .list-table .list-table-data .data.airing-started {
-  top: -0.5rem;
+  top: -0.65rem;
 }
 
 .list-table .list-table-data .data.airing-finished {
-  top: 0.5rem;
+  top: 0.65rem;
   margin-left: -8rem;
 }
 
