--- a/scss/utilities/initial-variables.scss
+++ b/scss/utilities/initial-variables.scss
@@ -12,14 +12,14 @@ $radius: 4px;
 
 $large-shadow: 0 10px 20px rgba(#000, 0.05);
 
-$button-background: #fff;
+$button-background-color: #fff;
 $button-border: #dbdbdb;
 $button-color: $text-color;
 $button-height: 2.5em;
 $button-hover-border: #b5b5b5;
 $button-focus-shadow: 0 0 0 0.125em rgba(50, 115, 220, .25);
 
-$select-background: #fff;
+$select-background-color: #fff;
 $select-border: #dbdbdb;
 $select-color: $text-color;
 $select-height: 2.5em;
@@ -28,27 +28,32 @@ $select-focus-border: #3273dc;
 $select-focus-shadow: 0 0 0 0.125em rgba(50,115,220,.25);
 
 $textarea-shadow: inset 0 0.0625em 0.125em rgba(10,10,10,.05);
-$textarea-background: #fff;
+$textarea-background-color: #fff;
 $textarea-border: #dbdbdb;
 $textarea-color: $text-color;
 $textarea-hover-border: #b5b5b5;
 $textarea-focus-border: #3273dc;
 $textarea-focus-shadow: 0 0 0 0.125em rgba(50,115,220,.25);
 
-$header-background: $mal-color;
+$header-height: 70px;
+$header-background-color: transparent;
+$header-background-image: 'https://i.imgur.com/einmpQQ.gif';
 $header-menu-text:  rgba(255, 255, 255, 0.7);
-$header-button-hover-background: #F2F2F3;
+$header-button-hover-background-color: #F2F2F3;
 
-$status-menu-background: transparent;
+$status-menu-background-color: transparent;
 $status-menu-button-color: #fff;
-$status-menu-button-hover-background: rgba(10, 10, 10, 0.1);
-$status-menu-button-active-background: #fff;
+$status-menu-button-hover-background-color: rgba(10, 10, 10, 0.1);
+$status-menu-button-active-background-color: #fff;
 $status-menu-button-active-color: $primary-color;
 
 $list-title-color: $text-color;
-$list-item-background: #fff;
+$list-item-background-color: #fff;
+$list-item-tag-background-color: #f5f5f5;
+$list-item-tag-color: #4a4a4a;
+$list-item-tag-hover-background-color: #e8e8e8;
 
-$list-data-number-background: #fff;
+$list-data-number-background-color: #fff;
 $list-data-number-order: 1;
 $list-data-number-width: 1rem;
 $list-data-number-height: 1rem;
@@ -90,12 +95,12 @@ $list-data-stats-order: 25;
 $list-data-stats-width: 8rem;
 $list-data-stats-height: 1.3rem;
 
-$favorite-tag-background: #fff;
+$favorite-tag-background-color: #fff;
 $favorite-tag-color: #ff65ad;
-$favorite-tag-hover-background: $text-color;
+$favorite-tag-hover-background-color: $text-color;
 $favorite-tag-hover-color: #fff;
 
-$footer-background: $mal-color;
+$footer-background-color: $mal-color;
 $footer-color: rgba(255, 255, 255, 0.7);
 
 $publishers: (
