--- a/scss/_filter.scss
+++ b/scss/_filter.scss
@@ -10,7 +10,8 @@
   opacity: 1 !important;
 }
 
-#advanced-options::before {
+#advanced-options::before,
+#fancybox-inner::before {
   background-color: #f5f5f5;
   border-bottom: 1px solid #dbdbdb;
   border-top-left-radius: 6px;
@@ -24,9 +25,28 @@
   font-size: 1.5rem;
   line-height: 1;
   font-family: $font-family;
+  text-align: left;
 }
 
-#advanced-options #fancybox-close {
+#fancybox-outer {
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+#fancybox-inner {
+  top: 0px !important;
+  left: 0px !important;
+  width: 100% !important;
+  height: 100% !important;
+  display: flex;
+  flex-direction: column;
+
+  &::before {
+    content: 'Edit';
+  }
+}
+
+#fancybox-close {
   width: 0;
   height: 0;
   top: 0px;
@@ -37,7 +57,7 @@
   }
 }
 
-#advanced-options #fancybox-close::after {
+#fancybox-close::after {
   font-family: FontAwesome;
   font-size: 23px;
   background: none;
