Fix modal close button.

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1127,10 +1127,10 @@ body.anime .list-unit.all_anime .text::after {
 }
 
 #fancybox-close {
-  width: 0;
-  height: 0;
-  top: 0px;
-  right: 0px;
+  width: 0 !important;
+  height: 0 !important;
+  top: 0px !important;
+  right: 0px !important;
 }
 
 #fancybox-close:hover::after {
