--- a/scss/utilities/initial-variables.scss
+++ b/scss/utilities/initial-variables.scss
@@ -44,6 +44,7 @@ $header-button-hover-background-color: #F2F2F3;
 
 $status-menu-background-color: transparent;
 $status-menu-button-color: rgba(255, 255, 255, 0.7);
+$status-menu-button-hover-color: #fff;
 $status-menu-button-hover-background-color: rgba(10, 10, 10, 0.1);
 $status-menu-button-active-background-color: #fff;
 $status-menu-button-active-color: $primary-color;
